--- a/style.css
+++ b/style.css
@@ -5,28 +5,27 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-header {
+header div {
   width: 100%;
   height: 3.3rem;
   background-color: rgb(115, 95, 227);
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   padding: 0%;
   margin: 0%;
 }
 header a {
-  justify-content: center;
-  text-align: center;
   text-decoration: none;
   font-size: 2rem;
   color: rgb(244, 244, 244);
-  margin: 2rem 2rem;
+  margin: 0.3rem 2rem;
 }
 main {
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 1rem;
+  height: 100%;
 }
 
 #contaier {
@@ -63,7 +62,7 @@ h2 {
 }
 
 .quantity-controls input {
-  width: 1rem;
+  width: 2rem;
   text-align: center;
 }
 
@@ -72,15 +71,23 @@ h2 {
 }
 
 #sub-btn {
-  color: white;
-  text-align: center;
+  margin: 0 auto;
   position: fixed;
+}
+
+#sub-btn button {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
   background-color: rgb(115, 95, 227);
   padding: 0.5rem 1.5rem;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#sub-btn:hover {
+#sub-btn button:hover {
   background-color: rgb(74, 62, 145);
 }
 
@@ -89,6 +96,7 @@ footer {
   background-color: rgb(115, 95, 227);
   margin-top: 0.2rem;
   width: 100%;
+  position: relative;
 }
 
 @media (max-width: 48rem) {
@@ -96,16 +104,18 @@ footer {
     grid-template-columns: 1fr;
     width: 100%;
     margin: 0;
+    display: grid;
+    gap: 1rem;
   }
   header {
+    width: 100%;
     height: auto;
     display: block;
     text-align: center;
   }
 
-  header a {
+  header div {
     font-size: 1.2rem;
-    margin: 1rem 0;
   }
   footer {
     height: auto;
