--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-header div {
+header {
   width: 100%;
   height: 3.3rem;
   background-color: rgb(115, 95, 227);
