--- a/style.css
+++ b/style.css
@@ -84,12 +84,14 @@ h2 {
   text-align: center;
   margin: 2rem 0;
   padding: 0.65rem 0;
-  background-color: rgb(115, 95, 227);
+  background-color: rgb(82, 68, 158);
+  border: 0;
+  outline: 0;
   border-radius: 10px;
 }
 
 #sub-btn button:hover {
-  background-color: rgb(79, 65, 157);
+  background-color: rgb(57, 47, 110);
 }
 
 footer {
