--- a/style.css
+++ b/style.css
@@ -106,17 +106,22 @@ h2 {
   z-index: 1000;
 }
 .toaster {
-  color: white;
+  color: rgb(48, 239, 48);
   width: 300px;
-  background-color: rgb(147, 222, 147);
-  font-weight: 500px;
+  background-color: rgb(183, 235, 183);
+  border-left: 5px solid rgb(58, 238, 58);
+  font-weight: 500;
   margin: 10px 0;
   padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 4px 8px rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 1000;
   animation: forwards 4s ease-out;
 }
 
