--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h2 {
 }
 #sub-btn {
   position: fixed;
-  bottom: 0;
+  bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
@@ -106,10 +106,7 @@ h2 {
   z-index: 1000;
 }
 .toaster {
-  color: rgb(48, 239, 48);
   width: 300px;
-  background-color: rgb(183, 235, 183);
-  border-left: 5px solid rgb(58, 238, 58);
   font-weight: 500;
   margin: 10px 0;
   padding: 15px;
@@ -118,21 +115,17 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 1000;
   animation: forwards 4s ease-out;
 }
 
+footer {
+  height: 2.5rem;
+  width: 100%;
+  background-color: rgb(115, 95, 227);
+  margin: 0;
+}
+
 @media (max-width: 48rem) {
-  main ul {
-    grid-template-columns: 1fr;
-    width: 100%;
-    margin: 0;
-    display: grid;
-    gap: 1rem;
-  }
   header {
     width: 100%;
     height: auto;
@@ -144,6 +137,30 @@ h2 {
   }
 
   header div {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+  }
+  main ul {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .item {
+    margin: 0.5rem;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  #sub-btn {
+    width: 4rem;
+    bottom: 10;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  #toasterContainer {
+    bottom: 60px;
+    right: 10px;
+    margin: 0.4rem;
   }
 }
