--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h2 {
   z-index: 1000;
 }
 .toaster {
-  width: 300px;
+  width: 18.75rem;
   font-weight: 500;
   margin: 10px 0;
   padding: 15px;
